Mts bugs detectados e exterminados, usados de oferenda em cultos. backend completo. eu acho.
